# alakazam

./: .gitignore  README.md  example_config.yaml  pyproject.toml
alakazam/: __init__.py  __main__.py  apply.py  cli.py  config.py  flow.py  fluxscale.py  jones.py  pipeline.py
alakazam/calibration/: __init__.py  apply.py  fluxscale.py
alakazam/cli/: __init__.py
alakazam/core/: __init__.py  apply.py  averaging.py  chunking.py  engine.py  fluxscale.py  initialization.py  interpolation.py  logging_utils.py  memory.py  metadata.py  ms_io.py  quality.py  resources.py  rfi.py  solint.py  solver.py
alakazam/io/: __init__.py  hdf5.py  hdf5_io.py  multi_jones_hdf5.py
alakazam/jones/: __init__.py  algebra.py  base.py  constructors.py  constructors_ad.py  crosshand.py  delay.py  gain.py  leakage.py  parang.py
alakazam/pipeline/: __init__.py
alakazam/solvers/: __init__.py  _cpp_solvers.cpp  b_bandpass.py  base.py  cross_delay.py  cross_phase.py  d_leakage.py  g_gain.py  gains.py  k_delay.py  kcross_delay.py  leakage.py  parallel_delay.py  registry.py  utils.py  xf_crossphase.py
examples/: README_yaml.md  bandpass_timegain.yaml  basic_kgb.yaml  complete.yaml  config.yaml  external_preapply.yaml  fluxscale.yaml  full_polarization.yaml  g_gain.yaml  k_delay.yaml  k_delay_chansel.yaml  meerkat_fullpol.yaml  multi_spw.yaml  multifield_fluxscale.yaml  nearest_sky.yaml  phase_only.yaml  pinned_field.yaml  sequential_kgb.yaml  sequential_per_spw.yaml  simple_kg.yaml  simple_kgb.yaml  spw_channel_selection.yaml  with_external_preapply.yaml
