[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alakazam"
version = "3.0.0"
description = "Radio interferometric calibration pipeline"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "pyyaml>=6.0",
    "numba>=0.57",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.scripts]
alakazam = "alakazam.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alakazam*"]
